# blake2_mjosref

./: CMakeLists.txt
test/: CMakeLists.txt  test_main.c
